fixing spacing around clear search x on basic search

--- a/less/sections/primo-search.less
+++ b/less/sections/primo-search.less
@@ -32,6 +32,7 @@
   }
   input[type="text"]{
     .form-control;
+    padding-right:25px;
   }
   input,
   input[type="text"],
